--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div style="margin-left: 0; padding:0;" class="container black topBotomBordersOut">
   <div style="text-align: left; margin-top:20px">
   <a href="/">ACCUEIL</a>
-  <a href="/gallery">GALERIE</a>
-  <a href="/about">A PROPOS</a>
-  <a href="/contact">CONTACT</a>
+  <a (click)="gallery()">GALERIE</a>
+  <a (click)="about()">A PROPOS</a>
+  <a (click)="contact()">CONTACT</a>
   </div></div>
