--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,15 @@
-<p>
-  about works!
-</p>
+<div style="margin-top: 30px" class="container">
+  <h3>Quoi qu'est-ce ?</h3>
+  <p>Suite à l'organisation de l'opération "Fingers out" par <a href="https://www.youtube.com/user/pvnova">PV Nova</a>
+  <br> nous avons décidé de relever le défi. "Selfie" aux contraintes imposées, notamment sur celle du narcissisme...
+    <br>
+  </p>
+  <br>
+  <h3>Qui sommes nous ?</h3>
+  <p>Nous sommes de divers horizons, aimant divers styles, mais avec une passion commune ! <br>Cet événement était pour nous un moyen de nous retrouver autout de ce que l'on aime.
+  <br></p>
+
+<h3>Que faisons nous d'autre ?</h3>
+  <p>Vous pouvez retrouver ceux qui ont participé sur les adresses suivantes:<br>
+    <a href="www.chilliz.net">Chilliz</a></p>
+</div>
