--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,5 @@
-<header class="container">#SELFIE</header>
+<header style="margin-top: 20px; cursor: default" class="container">#SELFIE</header>
 
-<div style="text-align: center" class="container">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/PGfj7odfK7Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+<div style="text-align: center; margin-top: 60px" class="container">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/i6qXZa-N_ow" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
