--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,3 +1,3 @@
-<p>
-  gallery works!
-</p>
+<div style="margin-top: 5%;margin-left: 15px;margin-right: 15px" id="gallery">
+  <p class="col-3">Les photos de la journée !</p>
+</div>
