--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 body {
-  /*background-image: url("../assets/chili.png");*/
+  background-image: url("/components/home/back.jpg");
   /*background-size: 20%;*/
+
 }
 
