--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,5 @@
-<div style="margin-top: 70px" class="container">
+<div style="padding-top:30px;padding-bottom: 15px" id="back">
+<div style="margin-top: 40px" class="container">
   <h3>Quoi qu'est-ce ?</h3><br>
   <p>Suite à l'organisation de l'opération "Fingers out" par <a href="https://www.youtube.com/user/pvnova">PV Nova</a>
   <br> nous avons décidé de relever le défi. "Selfie" aux contraintes imposées, notamment sur celle du narcissisme...
@@ -7,12 +8,14 @@
   <br><br>
   <h3>Qui sommes nous ?</h3>
   <br>
-  <p>Nous sommes de divers horizons, aimant divers styles, mais avec une passion commune ! <br>Cet événement était pour nous un moyen de nous retrouver autout de ce que l'on aime.
+  <p>Nous sommes de divers horizons, aimant différents styles, mais avec une passion commune ! <br>Cet événement était pour nous un moyen de nous retrouver autour de ce que l'on aime.
   <br></p><br>
 <br>
 <h3>Que faisons nous d'autre ?</h3>
   <br>
   <p>Vous pouvez retrouver ceux qui ont participé sur les adresses suivantes:<br>
-    <a href="www.chilliz.net">Chilliz</a><br>
-    <a href="clementmorelle.com">Clément Morelle</a></p>
+    <a style="font-weight: bold" href="www.chilliz.net">Chilliz</a><br>
+    <a style="font-weight: bold" href="https://www.jamendo.com/artist/368319/simboo">Simboo</a><br>
+    <a style="font-weight: bold" href="clementmorelle.com">Clément Morelle</a></p>
+</div>
 </div>
