--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,3 +5,9 @@ header{
   font-style: italic;
   font-weight: bold;
 }
+
+#back{
+  background-image: url("https://wallpapercave.com/wp/pEeUsp1.jpg");
+  padding: 30px;
+  padding-bottom: 70px;
+}
