--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,5 +2,4 @@
 <header style="margin-top: 70px; cursor: default" class="container">#SELFIE</header>
 
 <div style="text-align: center; margin-top: 60px" class="container">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/cOY6J86mTc4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-</div>
+  <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/422958891&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></div>
